tests/ui/parser/issues/circular-module-with-doc-comment-issue-97589/circular-module-with-doc-comment-issue-97589.stderr
error: circular modules: $DIR/recursive.rs -> $DIR/recursive.rs
  --> $DIR/recursive.rs:6:1
   |
LL | mod recursive;
   | ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

