tests/ui/parser/issues/circular-module-with-doc-comment-issue-97589/circular-module-with-doc-comment-issue-97589.rs
// Regression test for #97589: a doc-comment on a circular module bypassed cycle detection

#![crate_type = "lib"]

pub mod recursive;

//~? ERROR circular modules: $DIR/recursive.rs -> $DIR/recursive.rs
